<resources>
    <string name="app_name">Home Security P3</string>
    <string name="title_home">Home</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_settings">Settings</string>

    <!--Buttons and edit text fields from Login Activity-->
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="text_view_forgot_password">FORGOT PASSWORD?</string>
    <string name="text_view_clickable_sign_up">SIGN UP FOR A FREE ACCOUNT HERE</string>
    <string name="text_view_have_no_user">In order to use this app, you need to \n sign in. Dont have an account?</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign up</string>

    <!--Buttons and edit text fields from Sign up Activity-->
    <string name="edit_text_password_confirm">Enter Password Again</string>
    <string name="edit_text_first_name">First name</string>
    <string name="edit_text_last_name">Last name</string>
    <string name="button_login_info">Already have an account? Login</string>
    <string name="text_view_sign_up_info">In order to use this app, you need to \n sign up. Fill out the form below.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="front_screen_status_text_on">System is ON</string>
    <string name="front_screen_status_text_off">system is OFF</string>

    <!-- Facebook ids -->
    <string name="facebook_app_id">306849843357781</string>
    <string name="fb_login_protocol_scheme">fb306849843357781</string>

    <!-- Basic values -->
    <string name="string_back">Back</string>
    <string name="picture_content_description_booga">Booga Picture</string>

    <!--Top Toolbar text-->
    <string name="toolbar_title_near_me">Events i nærheden</string>
    <string name="toolbar_title_my_event">Mine events</string>

    <!--Bottom Navigation bar text-->
    <string name="bottom_navigation_near_me_text">Nær mig</string>
    <string name="bottom_navigation_all_events_text">Alle Events</string>
    <string name="bottom_navigation_my_events_text">Mine Events</string>
    <string name="bottom_navigation_my_profile_text">Min Profil</string>

    <!-- Icons -->
    <string name="icon_settings">Settings</string>
    <string name="icon_menu">Menu</string>

    <!-- Merge accounts Activity-->
    <string name="text_view_merge_user_account">Please provide email and password to merge accounts</string>
    <string name="button_merge_email_with_facebook">Link email to facebook</string>
    <string name="button_merge_facebook_with_email">Link facebook to email</string>

    <!-- Fragment attend event -->
    <string name="text_view_attend_events">LATEST ATTENDED EVENTS</string>
    <string name="text_view_hosted_events">LATEST HOSTED EVENTS</string>
    <string name="text_view_see_more">SEE MORE</string>

    <!-- Fragment all events -->
    <string name="text_view_events_near">EVENTS NEAR YOU</string>
    <string name="text_view_trending_events">TRENDING EVENTS</string>
    <string name="text_view_browse_events">BROWSE EVENTS BY TYPE</string>

    <!--Fragment my events-->
    <string name="text_view_favourites">YOUR FAVOURITES</string>

    <!-- Profile fragment -->
    <string name="text_view_picture_not_found">Please upload profile picture</string>
    <string name="text_view_name_placeholder">%1$s %2$s</string>
    <string name="text_view_bio_placeholder">No bio</string>
    <string name="text_view_user_email">user email</string>
    <string name="text_view_user_phone_number">user phone number</string>

    <!-- Reset Password activity -->
    <string name="button_reset_password">Reset your password</string>
    <string name="text_view_reset_password"><html>Enter your email and we\'ll send\nyou a link to get back into your account.</html></string>
    <string name="text_view_reset_password_trouble">Trouble Logging In?</string>

    <!-- SettingsPageActivity activity -->
    <string name="button_merge">Merge accounts</string>
    <string name="button_upload_picture">Upload picture</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_bio_edit">Edit bio</string>
    <string name="text_view_profile_settings">Profile Settings</string>
    <string name="text_view_account_settings">Account Settings</string>
    <string name="edit_text_change_password">Change Password</string>
    <string name="switch_make_email_private">Make email private</string>
    <string name="switch_make_phone_private">Make phone number private</string>
    <string name="text_view_delete_account">Delete Account</string>

    <!--Event page activity-->
    <string name="text_view_gallery">GALLERY</string>
    <string name="button_event_page_attend">SIGN ME UP!</string>
    <string name="button_event_page_attend_confirm">YOU ARE IN!</string>
    <string name="button_event_page_unattend">Remove me from attending list</string>

    <!--Create event activity-->
    <string name="text_view_create_event_upload_en">Upload event image</string>
    <string name="text_view_create_event_upload_da">Opret din fest</string>
    <string name="edit_text_view_signup_pin">PIN</string>
    <string name="text_view_add_room_help_text">Click the + button in the bottom right corner to add a room</string>
    <string name="text_view_add_sensor_help_text">Click the + button in the right bottom corner to add a new sensor</string>

</resources>
