<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewProfileSettingsId"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/text_view_profile_settings"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_upload_picture"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/button_upload_picture"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileSettingsId" />

        <Button
            android:id="@+id/button_bio_edit"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/button_bio_edit"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_upload_picture" />

        <Switch
            android:id="@+id/switchMakeEmailPrivateId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:backgroundTint="@color/ash_grey"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/switch_make_email_private"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_bio_edit" />

        <Switch
            android:id="@+id/switchMakePhonePrivateId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:backgroundTint="@color/ash_grey"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/switch_make_phone_private"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchMakeEmailPrivateId" />

        <TextView
            android:id="@+id/textViewAccountSettingsId"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/text_view_account_settings"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchMakePhonePrivateId" />

        <Button
            android:id="@+id/buttonMergeEmailWithFacebookId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/button_merge_email_with_facebook"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAccountSettingsId" />

        <Button
            android:id="@+id/buttonMergeFacebookWithEmailId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/button_merge_facebook_with_email"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMergeEmailWithFacebookId" />

        <EditText
            android:id="@+id/editTextChangePasswordId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:hint="@string/edit_text_change_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMergeFacebookWithEmailId"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextMatchChangePasswordId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:hint="@string/edit_text_password_confirm"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextChangePasswordId"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonChangePasswordId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/edit_text_change_password"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMatchChangePasswordId" />

        <Button
            android:id="@+id/buttonDeleteAccountId"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/text_view_delete_account"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChangePasswordId" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:drawableEnd="?attr/homeAsUpIndicator"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/button_sign_out"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDeleteAccountId" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
