<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <TextView
        android:id="@+id/text_view_sign_up_description"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/text_view_sign_up_info"
        android:textColor="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <EditText
        android:id="@+id/text_view_sign_up_name_input"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/onyx"
        android:ems="10"
        android:hint="@string/edit_text_first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/onyx"
        android:textColorHint="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/text_view_sign_up_input_last_name"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/onyx"
        android:ems="10"
        android:hint="@string/edit_text_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/onyx"
        android:textColorHint="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/text_view_sign_up_email_input"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/onyx"
        android:ems="10"
        android:hint="@string/edit_text_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/onyx"
        android:textColorHint="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/text_view_sign_up_password_input"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/onyx"
        android:ems="10"
        android:hint="@string/edit_text_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/onyx"
        android:textColorHint="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/text_view_sign_up_password_confirm_input"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/onyx"
        android:ems="10"
        android:hint="@string/edit_text_password_confirm"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/onyx"
        android:textColorHint="@color/onyx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonSignUpLoginId"
        android:layout_width="361dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/pastelblue"
        android:text="@string/button_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />
</android.support.constraint.ConstraintLayout>